@@ -971,6 +971,7 @@ Other memory:
 	* Added netdev_foreach() to support traversal of registered network devices
 	* Added support for 'ifconfig' command to NSH (examples/nsh)
 	* Moved MAC and ethernet definitions to net/ethernet.h
+	* Fix sim and DM90x0 compilation errors introduced in 0.3.4
 </pre></ul>
 
 <table width ="100%">
